--- a/sections/iv-acknowledgements.tex
+++ b/sections/iv-acknowledgements.tex
@@ -5,3 +5,17 @@
 \chapter{Acknowledgements}
 \markboth{Acknowledgements}{}
 
+\begin{center}
+
+My supervisors Manuel and Gabi, for their (usually) gentle guidance, and for
+allowing me the opportunity and (most importantly) the time to explore possibilities.
+\\\qquad
+
+My friends and family, for putting up with me when things got out of hand\\
+(as they inevitably do).
+\\\qquad
+
+And of course, to Josephine, for her unwavering support and encouragement.
+
+\end{center}
+
