--- a/preamble.tex
+++ b/preamble.tex
@@ -316,3 +316,9 @@
 \providecommand{\indexe}[1]{\index{#1}\emph{#1}}
 \providecommand{\indext}[1]{\index{#1}#1}
 
+\newcommand{\gpu}[1][]{\index{graphics processing unit!#1}}
+\newcommand{\gpgpu}[1][]{\index{general-purpose computing on graphics processing units}}
+\newcommand{\cuda}[1][]{\index{CUDA!#1}}
+
+\index{GPU|see {graphics processing unit}}
+\index{GPGPU|see {general-purpose computing on graphics processing units}}
