--- a/sections/iii-abstract.tex
+++ b/sections/iii-abstract.tex
@@ -2,12 +2,12 @@
 \chapter{Abstract}
 \markboth{Abstract}{}
 
-While it is well acknowledged that the dominant mechanism for scaling processor
+It is well acknowledged that the dominant mechanism for scaling processor
 performance has become to increase the number of cores on a chip, rather than
-improve the performance of a single core, harnessing these extra cores to
-improve single application performance remains an extremely challenging task. A
-recent trend has been to use commodity graphics processing units to explore new
-algorithms and programming languages that can address the challenges of
+improve the performance of a single core. However, harnessing these extra cores
+to improve single application performance remains an extremely challenging task.
+A recent trend has been to use commodity graphics processing units to explore
+new algorithms and programming languages that can address the challenges of
 parallelism and scalability for devices containing hundreds or thousands of
 cores.
 
@@ -18,26 +18,26 @@ explains how to efficiently implement such a language, ranging from
 optimisations to the input program and the generation of efficient target code,
 to optimisations in the runtime system which executes the resulting programs.
 
-In particular, this thesis adds backend-agnostic optimisations to the embedded
-array language, primarily in the form of a novel approach to array fusion.
-Furthermore, these optimisations are completely type preserving, which amounts
-to a partial proof of correctness of the optimisations, checked by the type
-checker at compilation time.
+In particular, I add backend-agnostic optimisations to the embedded array
+language, primarily in the form of a novel approach to array fusion. These
+optimisations are completely type preserving, amounting to a partial proof of
+correctness of the optimisations, checked by the type checker at compilation
+time.
 
-In addition, significant extensions to the CUDA\cuda{} backend targeting parallel
-execution on multicore graphics processing units (GPUs)\gpu{} were developed. These
-additions include a dynamic quasi quotation-based code generation system for
-algorithmic skeletons that are instantiated at runtime. In order to minimise the
-overheads of runtime compilation, generated codes are compiled in parallel and
-asynchronously with other operations, and compiled binaries are cached for later
-reuse, including across program invocations. A significant overhead in GPU
-programs is the transfer of data to and from the device, so a garbage
-collection-based memory management system was implemented that minimises data
+In addition, I develop the CUDA\cuda{} backend to Accelerate, which targets
+parallel execution on multicore graphics processing units (GPUs)\gpu{}. I
+implement a dynamic quasi quotation-based code generation system for algorithmic
+skeletons that are instantiated at runtime. In order to minimise the overheads
+of runtime compilation, generated codes are compiled in parallel and
+asynchronously with other operations. Here, compiled binaries are cached for
+later reuse, including across program invocations. As a significant overhead in
+GPU programs is the transfer of data to and from the device, a garbage
+collection-based memory management system was implemented which minimises data
 transfers. Finally, I implement an execution engine that optimises the loading,
 configuration, and concurrent execution of the compiled GPU kernels.
 
-My results show that with these additions, programs written in Accelerate can be
-competitive in performance to programs written in traditional lower-level
+My results show that with these additions, programs written in Accelerate can
+be competitive in performance to programs written in traditional lower-level
 languages, while enjoying a much higher level of abstraction. Through the work
 done in this thesis, Accelerate has become the dominant method for GPGPU\gpgpu{}
 programming in Haskell.
