more copy edits to abstract, 1, 2

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -75,9 +75,9 @@ individual work:
         parameterised collective array computations that is more expressive than
         previous GPGPU\gpgpu{} proposals (Section~\ref{sec:accelerate}).
 
-    \item I implement a dynamic code generator based on CUDA\cuda{} skeletons of
-        collective array operations that are instantiated at runtime
-        (Sections \ref{sec:code_generation} \&
+    \item I implement a dynamic code generator based on CUDA\cuda{}
+        skeletons\skeleton{} of collective array operations that are
+        instantiated at runtime (Sections \ref{sec:code_generation} \&
         \ref{sec:instantiating_skeletons}).
 
     \item I implement an execution engine that caches previously compiled
