--- a/preamble.tex
+++ b/preamble.tex
@@ -60,7 +60,6 @@
 \usepackage[multiple]{footmisc}
 % \usepackage{imakeidx}
 
-
 \onehalfspacing
 %\doublespacing
 
@@ -318,16 +317,21 @@
 \providecommand{\indexe}[1]{\index{#1}\emph{#1}}
 \providecommand{\indext}[1]{\index{#1}#1}
 
-\providecommand{\AST}[1][]{\index{abstract syntax tree!#1}}
+\providecommand{\AST}[1][]{\index{AST (abstract syntax tree)!#1}}
+\providecommand{\HOAS}[1][]{\index{HOAS (higher-order abstract syntax)!#1}}
+\providecommand{\arrs}[1][]{\index{array!#1}}
 \providecommand{\cuda}[1][]{\index{CUDA!#1}}
 \providecommand{\fusion}[1][]{\index{fusion!#1}}
-\providecommand{\gpu}[1][]{\index{graphics processing unit!#1}}
-\providecommand{\gpgpu}[1][]{\index{general-purpose computing on graphics processing units}}
+\providecommand{\gpgpu}[1][]{\index{GPGPU (general-purpose computing on GPUs)!#1}}
+\providecommand{\gpu}[1][]{\index{GPU (graphics processing unit)!#1}}
 \providecommand{\lang}[1][]{\index{language!#1}}
+\providecommand{\qq}[1][]{\index{quasiquotation!#1}}
+\providecommand{\aq}[1][]{\index{antiquotation!#1}}
+\providecommand{\skeleton}[1][]{\index{algorithmic skeleton!#1}}
 
-\index{AST|see {abstract syntax tree}}
 \index{DSL|see {language: domain-specific}}
 \index{EDSL|see {language: embedded}}
-\index{GPU|see {graphics processing unit}}
-\index{GPGPU|see {general-purpose computing on graphics processing units}}
+\index{device, the|see {GPU}}
+\index{nursery|see {cache: allocation}}
+\index{skeleton|see {algorithmic skeleton}}
 
