--- a/sections/iii-abstract.tex
+++ b/sections/iii-abstract.tex
@@ -11,7 +11,7 @@ new algorithms and programming languages that can address the challenges of
 parallelism and scalability for devices containing hundreds or thousands of
 cores.
 
-The research documented in this dissertation builds upon the \indexe{Accelerate}
+The research documented in this dissertation builds upon the \emph{Accelerate}
 language, an embedded domain specific language of purely functional collective
 operations over dense, multidimensional arrays. Overall, this dissertation
 explains how to efficiently implement such a language, ranging from
@@ -24,22 +24,22 @@ optimisations are completely type preserving, amounting to a partial proof of
 correctness of the optimisations, checked by the type checker at compilation
 time.
 
-In addition, I develop the CUDA\cuda{} backend to Accelerate, which targets
-parallel execution on multicore graphics processing units (GPUs)\gpu{}. I
-implement a dynamic quasi quotation-based code generation system for algorithmic
-skeletons that are instantiated at runtime. In order to minimise the overheads
-of runtime compilation, generated codes are compiled in parallel and
-asynchronously with other operations. Here, compiled binaries are cached for
-later reuse, including across program invocations. As a significant overhead in
-GPU programs is the transfer of data to and from the device, a garbage
-collection-based memory management system was implemented which minimises data
-transfers. Finally, I implement an execution engine that optimises the loading,
-configuration, and concurrent execution of the compiled GPU kernels.
+In addition, I develop the CUDA backend to Accelerate, which targets parallel
+execution on multicore graphics processing units (GPUs). I implement a dynamic
+quasi quotation-based code generation system for algorithmic skeletons that are
+instantiated at runtime. In order to minimise the overheads of runtime
+compilation, generated codes are compiled in parallel and asynchronously with
+other operations. Here, compiled binaries are cached for later reuse, including
+across program invocations. As a significant overhead in GPU programs is the
+transfer of data to and from the device, a garbage collection-based memory
+management system was implemented which minimises data transfers. Finally, I
+implement an execution engine that optimises the loading, configuration, and
+concurrent execution of the compiled GPU kernels.
 
 My results show that with these additions, programs written in Accelerate can
 be competitive in performance to programs written in traditional lower-level
 languages, while enjoying a much higher level of abstraction. Through the work
-done in this thesis, Accelerate has become the dominant method for GPGPU\gpgpu{}
+done in this thesis, Accelerate has become the dominant method for GPGPU
 programming in Haskell.
 
 
